--- a/packages/SystemUI/res/values/aquarios_strings.xml
+++ b/packages/SystemUI/res/values/aquarios_strings.xml
@@ -9,5 +9,8 @@
     <string name="quick_settings_screenshot_label">Screenshot</string>
     <!-- Expanded Desktop QS Tile -->
     <string name="quick_settings_expanded_desktop">Expanded</string>
-    <string name="quick_settings_expanded_desktop_off">Normal</string>            
+    <string name="quick_settings_expanded_desktop_off">Normal</string>
+    <!-- Reboot/Recovery QS Tile -->
+    <string name="quick_settings_reboot_label">Reboot</string>
+    <string name="quick_settings_reboot_recovery_label">Recovery</string>                 
 </resources>
