--- a/core/res/res/values/aquarios_config.xml
+++ b/core/res/res/values/aquarios_config.xml
@@ -54,5 +54,8 @@
     
   <!-- The list of components which should be forced to be enabled. -->
     <string-array name="config_forceEnabledComponents" translatable="false">
-    </string-array>        
+    </string-array>
+    
+    <!-- If this is true, key chords can be used to take a screen record on the device. -->
+    <bool name="config_enableScreenrecordChord">true</bool>            
 </resources>
