--- a/core/res/res/values/aquarios_symbols.xml
+++ b/core/res/res/values/aquarios_symbols.xml
@@ -70,4 +70,7 @@
 
   <!-- Screen Recording -->
   <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
+  <!-- Hardware key binding -->
+  <java-symbol type="integer" name="config_deviceHardwareKeys" />
 </resources>
