--- a/core/res/res/values/aquarios_config.xml
+++ b/core/res/res/values/aquarios_config.xml
@@ -47,12 +47,15 @@
         <item>100</item>
         <item>50</item>
     </integer-array>
+
+    <!-- Quick settings tiles columns and rows config -->
+    <integer name="config_qs_num_rows_landscape_default">2</integer>
     
-  <!-- The list of components which should be automatically disabled. -->
+    <!-- The list of components which should be automatically disabled. -->
     <string-array name="config_disabledComponents" translatable="false">
     </string-array>
     
-  <!-- The list of components which should be forced to be enabled. -->
+    <!-- The list of components which should be forced to be enabled. -->
     <string-array name="config_forceEnabledComponents" translatable="false">
     </string-array>
     
