[1/2] base: battery styles are back
Change-Id: I0b457e8d93af4d63c94ce0784733331d825926fe

base: some battery styles need smaller font to show 100

Change-Id: I3d8105c4f5a193d962415bc030afb5a2e041b8f5

base: battery styles: need to check special 100% font every time

Change-Id: Iaba666722f48eaf35dc1fa050e0de12b1f03290d

base: adjust battery style text

use same font style as the clock

Change-Id: I85ba0214b0d6eaa2c9e8c3bc934be2608dd5ff2a

base: tweak battery text alignment

lets face it - 100% battery is something you wont see very often
so its makes no sense to create default layout for that and
create useless space in 99% of the time.

Instead make the font smaller in that case and use shorter
text for the default layout.

[1/2] base: add battery display config
everything else on the statusbar can be hidden
why not also the battery if you want

--- a/core/res/res/values/aquarios_strings.xml
+++ b/core/res/res/values/aquarios_strings.xml
@@ -52,4 +52,11 @@
     <string name="adb_both_active_notification_title">ADB over USB &amp; network enabled</string>
     <!-- ADB notification message-->
     <string name="adb_active_generic_notification_message">Touch to disable debugging.</string>
+
+    <!-- battery styles -->
+    <string name="battery_style_text">Text only</string>
+    <string name="battery_style_default">Default</string>
+    <string name="battery_style_meter_horizontal">Horizontal bar</string>
+    <string name="battery_style_circle">Circle</string>
+    <string name="battery_style_droid">Droid</string>
 </resources>
