--- a/packages/SystemUI/res/values/aquarios_dimens.xml
+++ b/packages/SystemUI/res/values/aquarios_dimens.xml
@@ -21,4 +21,11 @@
 
     <!-- Network traffic monitor multi-line text size -->
     <dimen name="net_traffic_multi_text_size">9dp</dimen>
+
+    <!-- Battery - keyguard shortcut item margin  -->
+    <dimen name="keyguard_shortcut_item_margin">10dp</dimen>
+
+    <!-- Battery - text size small -->
+    <dimen name="battery_level_text_size_small">12sp</dimen>
+
 </resources>
